# least-squared-circle-fit

./: .gitignore  CMakeLists.txt  README.md
includes/: LeastSquaresCircleFit.h  const.h
src/: CMakeLists.txt  LeastSquaresCircleFit.cpp
tests/: CMakeLists.txt  base_test.cpp
